--- a/Classic - Modern Music Classification.ipynb
+++ b/Classic - Modern Music Classification.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from pydub import AudioSegment\n",
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "from matplotlib import pyplot as plt\n",
+    "import librosa.display\n",
+    "import numpy as np\n",
+    "import io"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Swp_y3lKq0GU"
@@ -26,9 +50,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pydub import AudioSegment\n",
-    "\n",
     "mp3_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Modern/mohamed rahem composer\"\n",
     "wav_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Modern/Modern_WAV\"\n",
     "\n",
@@ -63,10 +84,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import librosa\n",
-    "import soundfile as sf\n",
-    "\n",
     "input_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Modern/Modern_WAV\"\n",
     "output_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Modern/Normalized\"\n",
     "\n",
@@ -110,9 +127,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import librosa\n",
-    "\n",
     "input_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Classic/Normalized\"\n",
     "output_folder = \"/content/drive/MyDrive/Classification_Classic-Modern/Classic/Segmented\"\n",
     "\n",
@@ -227,14 +241,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import librosa\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import librosa.display\n",
-    "\n",
-    "\n",
-    "\n",
     "# Set up parameters for Mel spectrogram\n",
     "n_fft = 2048\n",
     "hop_length = 512\n",
@@ -687,20 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import librosa\n",
-    "import numpy as np\n",
-    "import os\n",
-    "from pydub import AudioSegment\n",
-    "from keras.models import load_model\n",
-    "\n",
     "def MP3TOWAV(mp3_file):\n",
     "    if mp3_file.endswith(\".mp3\"):\n",
     "        # Load MP3 file using pydub\n",
-    "        audio = AudioSegment.from_mp3(mp3_file, format=\"mp3\")\n",
+    "        audio = AudioSegment.from_file(mp3_file)\n",
     "        \n",
     "        # Export the audio file to a WAV file in memory\n",
     "        wav_file = io.BytesIO()\n",
@@ -709,13 +709,12 @@
     "\n",
     "        # Load the WAV file into memory using librosa.load()\n",
     "        y, sr = librosa.load(wav_file, sr=None)\n",
-    "        print(y)\n",
-    "        return y\n",
+    "        return y, sr\n",
     "\n",
     "def Norm(audio):\n",
     "    return librosa.util.normalize(audio)\n",
     "\n",
-    "def Segment(audio):\n",
+    "def Segment(audio, sr):\n",
     "    segment_length = 5\n",
     "    hop_length = 2\n",
     "    Segmented = []\n",
@@ -723,7 +722,7 @@
     "    # Calculate segment frame and sample lengths\n",
     "    segment_frames = int(segment_length * sr)\n",
     "    hop_frames = int(hop_length * sr)\n",
-    "    total_frames = len(y)\n",
+    "    total_frames = len(audio)\n",
     "    total_segments = int((total_frames - segment_frames) / hop_frames) + 1\n",
     "\n",
     "    # Segment audio using a sliding window\n",
@@ -733,11 +732,11 @@
     "        end_frame = start_frame + segment_frames\n",
     "\n",
     "        # Extract audio segment\n",
-    "        y_segment = y[start_frame:end_frame]\n",
+    "        y_segment = audio[start_frame:end_frame]\n",
     "        Segmented.append(y_segment)\n",
     "    return Segmented\n",
     "    \n",
-    "def MFCC(audio):\n",
+    "def MFCC(audio, sr):\n",
     "    # Extracting MFCC\n",
     "    # Set up parameters for MFCC extraction\n",
     "    n_fft = 2048\n",
@@ -746,7 +745,7 @@
     "    n_mfcc = 20\n",
     "\n",
     "    # Compute MFCCs\n",
-    "    mfcc = librosa.feature.mfcc(y=audio, sr=None, n_fft=n_fft, hop_length=hop_length, n_mels=n_mels, n_mfcc=n_mfcc)\n",
+    "    mfcc = librosa.feature.mfcc(y=audio, sr=sr, n_fft=n_fft, hop_length=hop_length, n_mels=n_mels, n_mfcc=n_mfcc)\n",
     "    \n",
     "    num_frames = 469\n",
     "    frame_length = 20\n",
@@ -769,22 +768,44 @@
     "\n",
     "def predict(model_path, file_path):\n",
     "    z = MFCC(Segment(Norm(MP3TOWAV(file_path))))\n",
-    "    model = load_model(model_path)\n",
-    "    y = model.predict(z)\n",
-    "    return y\n",
+    "    # model = load_model(model_path)\n",
+    "    # y = model.predict(z)\n",
+    "    return z\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"rD:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Dataset\\rai\\Clip_rai_6_3.wav\"\n",
-    "model_path = \"rD:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Classification_Classic-Modern\\model_1\"\n",
-    "\n",
-    "predict(model_path, file_path)"
+    "file_path = r\"test_data/classic_awy.mp3\"\n",
+    "audio, sr = MP3TOWAV(file_path)\n",
+    "norm_audio = Norm(audio)\n",
+    "segmented_audio = Segment(norm_audio, sr)\n",
+    "mfcc_audio = []\n",
+    "for audio_index in segmented_audio:\n",
+    "    audio_mfcc = MFCC(audio_index, sr)\n",
+    "    mfcc_audio.append(audio_mfcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array(mfcc_audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"test_data/classic_awy.npy\", arr)"
    ]
   },
   {
@@ -802,7 +823,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -816,7 +837,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
