--- a/Classic - Modern Music Classification.ipynb
+++ b/Classic - Modern Music Classification.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
+      "C:\\Users\\elsha\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
      ]
     }
    ],
@@ -21,7 +22,8 @@
     "from matplotlib import pyplot as plt\n",
     "import librosa.display\n",
     "import numpy as np\n",
-    "import io"
+    "import io\n",
+    "from keras.models import load_model"
    ]
   },
   {
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,45 +769,40 @@
     "        return mfcc\n",
     "\n",
     "def predict(model_path, file_path):\n",
-    "    z = MFCC(Segment(Norm(MP3TOWAV(file_path))))\n",
-    "    # model = load_model(model_path)\n",
-    "    # y = model.predict(z)\n",
-    "    return z\n",
-    "    \n"
+    "    audio, sr = MP3TOWAV(file_path)\n",
+    "    norm_audio = Norm(audio)\n",
+    "    segmented_audio = Segment(norm_audio, sr)\n",
+    "    mfcc_audio = []\n",
+    "    for audio_index in segmented_audio:\n",
+    "        audio_mfcc = MFCC(audio_index, sr)\n",
+    "        mfcc_audio.append(audio_mfcc)\n",
+    "    \n",
+    "    arr = np.array(mfcc_audio)\n",
+    "    model = load_model(model_path)\n",
+    "    y = model.predict(arr)\n",
+    "    return (sum(y)/len(y))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/5 [==============================] - 0s 17ms/step\n",
+      "[0.71631026]\n"
+     ]
+    }
+   ],
    "source": [
-    "file_path = r\"test_data/classic_awy.mp3\"\n",
-    "audio, sr = MP3TOWAV(file_path)\n",
-    "norm_audio = Norm(audio)\n",
-    "segmented_audio = Segment(norm_audio, sr)\n",
-    "mfcc_audio = []\n",
-    "for audio_index in segmented_audio:\n",
-    "    audio_mfcc = MFCC(audio_index, sr)\n",
-    "    mfcc_audio.append(audio_mfcc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = np.array(mfcc_audio)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save(\"test_data/classic_awy.npy\", arr)"
+    "file_path = r\"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Classification_Classic-Modern\\test.mp3\"\n",
+    "model_path = \"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Classification_Classic-Modern\\model_1\"\n",
+    "\n",
+    "x = predict(model_path, file_path)\n",
+    "print(x)"
    ]
   },
   {
@@ -823,7 +820,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -837,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
