Prediction function (Work on File)

--- a/Classic - Modern Music Classification.ipynb
+++ b/Classic - Modern Music Classification.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\elsha\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pydub import AudioSegment\n",
@@ -695,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,23 +771,18 @@
     "    arr = np.array(mfcc_audio)\n",
     "    model = load_model(model_path)\n",
     "    y = model.predict(arr)\n",
-    "    return (sum(y)/len(y))\n"
+    "    output = (sum(y)/len(y))\n",
+    "    if (output < 0.5):\n",
+    "        return \"Classic\"\n",
+    "    else:\n",
+    "        return \"Modern\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5/5 [==============================] - 0s 17ms/step\n",
-      "[0.71631026]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_path = r\"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Classification_Classic-Modern\\test.mp3\"\n",
     "model_path = \"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Classification_Classic-Modern\\model_1\"\n",
