--- a/Composers Classification/Composers Classification.ipynb
+++ b/Composers Classification/Composers Classification.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "11c3cef1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\elsha\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pydub import AudioSegment\n",
@@ -32285,7 +32294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "ad7d2719",
    "metadata": {},
    "outputs": [],
@@ -32456,11 +32465,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "# train model\n",
-    "history = model.fit(X_train, y_train, epochs=30, batch_size=32, validation_data=(X_val, y_val))\n",
-    "\n",
-    "# evaluate model on test set\n",
-    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
-    "print(f'Test accuracy: {test_acc}')"
+    "history = model.fit(X_train, y_train, epochs=30, batch_size=32, validation_data=(X_val, y_val))"
    ]
   },
   {
@@ -32553,9 +32558,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36c454c4",
+   "metadata": {},
+   "source": [
+    "# Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4333a559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50/50 - 4s - loss: 0.1329 - accuracy: 0.9718 - 4s/epoch - 82ms/step\n",
+      "Test loss: 0.13290460407733917\n",
+      "Test accuracy: 0.9718397855758667\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_model(r\"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Composers Classification\\Model\")\n",
+    "# Evaluate the model on the test set\n",
+    "loss, accuracy = model.evaluate(X_test, y_test, verbose=2)\n",
+    "print('Test loss:', loss)\n",
+    "print('Test accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e014f8aa",
+   "metadata": {},
+   "source": [
+    "# Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0cbf91e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MP3TOWAV(mp3_file):\n",
+    "    if mp3_file.endswith(\".mp3\"):\n",
+    "        # Load MP3 file using pydub\n",
+    "        audio = AudioSegment.from_file(mp3_file)\n",
+    "        \n",
+    "        # Export the audio file to a WAV file in memory\n",
+    "        wav_file = io.BytesIO()\n",
+    "        audio.export(wav_file, format=\"wav\")\n",
+    "        wav_file.seek(0)\n",
+    "\n",
+    "        # Load the WAV file into memory using librosa.load()\n",
+    "        y, sr = librosa.load(wav_file, sr=None)\n",
+    "        return y, sr\n",
+    "\n",
+    "def Norm(audio):\n",
+    "    return librosa.util.normalize(audio)\n",
+    "\n",
+    "def Segment(audio, sr):\n",
+    "    segment_length = 10\n",
+    "    hop_length = 2\n",
+    "    Segmented = []\n",
+    "    \n",
+    "    # Calculate segment frame and sample lengths\n",
+    "    segment_frames = int(segment_length * sr)\n",
+    "    hop_frames = int(hop_length * sr)\n",
+    "    total_frames = len(audio)\n",
+    "    total_segments = int((total_frames - segment_frames) / hop_frames) + 1\n",
+    "\n",
+    "    # Segment audio using a sliding window\n",
+    "    for i in range(total_segments):\n",
+    "        # Calculate start and end frame indices for current segment\n",
+    "        start_frame = i * hop_frames\n",
+    "        end_frame = start_frame + segment_frames\n",
+    "\n",
+    "        # Extract audio segment\n",
+    "        y_segment = audio[start_frame:end_frame]\n",
+    "        Segmented.append(y_segment)\n",
+    "    return Segmented\n",
+    "    \n",
+    "def MFCC(audio, sr):\n",
+    "    # Extracting MFCC\n",
+    "    # Set up parameters for MFCC extraction\n",
+    "    n_fft = 2048\n",
+    "    hop_length = 512\n",
+    "    n_mels = 128\n",
+    "    n_mfcc = 20\n",
+    "\n",
+    "    # Compute MFCCs\n",
+    "    mfcc = librosa.feature.mfcc(y=audio, sr=sr, n_fft=n_fft, hop_length=hop_length, n_mels=n_mels, n_mfcc=n_mfcc)\n",
+    "    \n",
+    "    num_classes=11\n",
+    "    target_shape=(20,938)\n",
+    "    \n",
+    "    #Load and preprocess data\n",
+    "    X = []\n",
+    "    y = []\n",
+    "    \n",
+    "    #Padding\n",
+    "    padding = [(0,0), (0, target_shape[1] - mfcc.shape[1])]\n",
+    "    mfcc = np.pad(mfcc, padding, mode='constant')\n",
+    "    \n",
+    "    return mfcc\n",
+    "    \n",
+    "\n",
+    "def predict(model_path, file_path):\n",
+    "    audio, sr = MP3TOWAV(file_path)\n",
+    "    norm_audio = Norm(audio)\n",
+    "    segmented_audio = Segment(norm_audio, sr)\n",
+    "    mfcc_audio = []\n",
+    "    for audio_index in segmented_audio:\n",
+    "        audio_mfcc = MFCC(audio_index, sr)\n",
+    "        mfcc_audio.append(audio_mfcc)\n",
+    "    \n",
+    "    arr = np.array(mfcc_audio)\n",
+    "    model = load_model(model_path)\n",
+    "    y = model.predict(arr)\n",
+    "    predicted_labels = np.argmax(y, axis=1)\n",
+    "    return int(sum(predicted_labels) / len(predicted_labels))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b79bb8b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/6 [==============================] - 0s 69ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = r\"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Composers Classification\\Composers\\Mohamed Rahem\\فاكر.mp3\"\n",
+    "model_path = r\"D:\\Education\\Semester 6\\CSE 321 Project Based Learning on CSE\\Composers Classification\\Model\"\n",
+    "y = predict(model_path, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "34bda8c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db96500d",
+   "id": "3e79bda6",
    "metadata": {},
    "outputs": [],
    "source": []
